# HandsCVProject

./: .gitignore  CMakeLists.txt  README.md
src/: cleanDataset  cleanDataset.cpp  metricsCalculation.cpp  metricsCalculation.hpp  metricsMain  metricsMain.cpp  segmentationAE.ipynb
src/.ipynb_checkpoints/: segmentationAE-checkpoint.ipynb
src/metrics/: README.txt  metricsCalculation.cpp  metricsCalculation.hpp  metricsTest  metricsTest.cpp
src/segmentation/: README.txt  handsSegmentationFunctions.cpp  handsSegmentationFunctions.hpp  handsSegmentationMain  handsSegmentationMain.cpp  segmentImageUnetModel.py
src/segmentation/models/: UNetUltimateDataset72.ipynb  UnetUltimateDatasetVGG19.ipynb
